--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/morgan": "^1.9.4",
     "axios": "^1.4.0",
     "express": "^4.18.2",
+    "mongoose": "^7.4.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
